--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ accelerate = "^0.21.0"
 bitsandbytes = "^0.40.0"
 textworld = "^1.6.1"
 scipy = "^1.12.0"
+wandb = "^0.16.4"
 
 
 [tool.poetry.group.dev.dependencies]
