--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ bitsandbytes = "^0.40.0"
 textworld = "^1.6.1"
 scipy = "^1.12.0"
 wandb = "^0.16.4"
-
+openai="^1.0.0"
+datasets="^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 wandb = "^0.16.2"
